# arexibo

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md  TODO  arexibo.desktop  build.rs  xmds_v5.wsdl
gui/: CMakeLists.txt  lib.cpp  lib.h  res.qrc  view.cpp  view.h
src/: collect.rs  command.rs  config.rs  convlayout.rs  gui.rs  layout.rs  logger.rs  main.rs  mainloop.rs  qt.rs  qt_binding.rs  res.rs  resource.rs  sched.rs  schedule.rs  server.rs  util.rs  xmds.rs  xmr.rs
