[package]
name = "arexibo"
description = "A client (player) for the Xibo signage system"
version = "0.2.6"
rust-version = "1.66"
edition = "2021"
authors = ["Georg Brandl <g.brandl@fz-juelich.de>"]
license = "AGPL-3.0-or-later"
repository = "https://github.com/birkenfeld/arexibo"
keywords = ["xibo", "signage", "gtk"]

[[bin]]
name = "arexibo"
path = "src/main.rs"

[dependencies]
# general
anyhow = "1.0"
base64 = "0.22"
time = { version = "0.3.37", features = ["parsing", "formatting", "local-offset"] }
once_cell = "1.18"
clap = { version = "4.0", features = ["cargo", "derive"] }
crossbeam-channel = "0.5"
parking_lot = "0.12"
hex = "0.4"
itertools = "0.13"
log = "0.4"
nix = { version = "0.29", features = ["fs", "hostname"] }
rand = "0.8"

# GUI
cairo-rs = { version = "0.15", features = ["png"] }
dbus = "0.9"
glib = "0.15"
gio = "0.15"
gdk = "0.15"
gdk-pixbuf = "0.15"
gtk = "0.15"
webkit2gtk = { version = "0.18", features = ["v2_22"] }

# crypto
arc4 = "0.1"
md-5 = "0.10"
rsa = "0.9"

# file formats
elementtree = "1.2"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"

# network
tiny_http = "0.12"
ureq = { version = "2.7", features = ["socks-proxy"] }
rustls = "0.23.21"
zmq = "0.10"

[build-dependencies]
elementtree = "1.2"

[features]
gui = []  # to avoid long link times when working on backend
default = ["gui"]
