[package]
name = "arexibo"
description = "A client (player) for the Xibo signage system"
version = "0.3.0"
rust-version = "1.75"
edition = "2021"
authors = ["Georg Brandl <g.brandl@fz-juelich.de>"]
license = "AGPL-3.0-or-later"
repository = "https://github.com/birkenfeld/arexibo"
keywords = ["xibo", "signage", "qt"]

[[bin]]
name = "arexibo"
path = "src/main.rs"

[dependencies]
# general
anyhow = "1.0"
base64 = "0.22"
time = { version = "0.3.37", features = ["parsing", "formatting", "local-offset", "serde"] }
once_cell = "1.18"
clap = { version = "4.0", features = ["cargo", "derive"] }
crossbeam-channel = "0.5"
parking_lot = "0.12"
hex = "0.4"
itertools = "0.14"
log = "0.4"
nix = { version = "0.29", features = ["fs", "hostname"] }
rand = "0.8"
dbus = "0.9"

# crypto
arc4 = "0.1"
md-5 = "0.10"
rsa = "0.9"

# file formats
elementtree = "1.2"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"

# network
tiny_http = "0.12"
ureq = { version = "3.0", features = ["socks-proxy"] }
zmq = "0.10"

# MSRV
base64ct = "~1.6"

[build-dependencies]
cmake = "0.1"
shlex = "1.3"
elementtree = "1.2"

[features]
